--- a/pom.xml
+++ b/pom.xml
@@ -163,12 +163,18 @@
 		<!-- Spring ACL requires a cache to store Object Identity and ACL entries, so we'll make use of Ehcache here.
 		And, to support Ehcache in Spring, we also need the spring-context-support dependency -->
 		<dependency>
-			<groupId>net.sf.ehcache</groupId>
-			<artifactId>ehcache-core</artifactId>
-			<version>2.6.11</version>
+			<groupId>org.ehcache</groupId>
+			<artifactId>ehcache</artifactId>
+			<version>3.10.1</version>
 		</dependency>
 
-
+		<!-- Spring ACL requires a cache to store Object Identity and ACL entries, so we'll make use of Ehcache here.
+		And, to support Ehcache in Spring, we also need the spring-context-support dependency -->
+		<dependency>
+			<groupId>net.sf.ehcache</groupId>
+			<artifactId>ehcache</artifactId>
+			<version>2.10.5</version>
+		</dependency>
 		<!-- DEPENDENCIES WITH DEBATABLE UTILITY -->
 
 
