--- a/pom.xml
+++ b/pom.xml
@@ -327,7 +327,7 @@
 								</goals>
 								<configuration>
 									<errorRemedy>ignore</errorRemedy>
-									<cleanLicensesOutputDirectory>false</cleanLicensesOutputDirectory>
+									<cleanLicensesOutputDirectory>true</cleanLicensesOutputDirectory>
 									<missingFile>${project.basedir}/license/resources/LICENSES_THIRD_PARTY.properties</missingFile>
 									<licensesOutputDirectory>${project.basedir}/license/third-party</licensesOutputDirectory>
 								</configuration>
