UPDATED: Added the lob service. Not working because of the getBinaryStream method of the Blob interface has a SQLException. Waiting for SO answer

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -145,6 +145,17 @@ signals.APIKeys.filename=key
 # https://stackoverflow.com/questions/15261456/how-do-i-disable-fail-on-empty-beans-in-jackson
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 
+
+# https://stackoverflow.com/questions/31469136/spring-data-jpa-storing-blob
+# This property configures the current session context, which is needed if you want to use the LobCreator, which is
+# invoked as  this.sessionFactory.getCurrentSession().getLobHelper()
+# Valid options:
+# - org.hibernate.context.ThreadLocalSessionContext
+# - thread
+# - org.hibernate.context.internal.ThreadLocalSessionContext
+
+spring.jpa.properties.hibernate.current_session_context_class=org.hibernate.context.internal.ThreadLocalSessionContext
+
 # Configure lazy initializations vs eager. In production should be true, but for many reasons it makes no sense to not
 # initialize the objects when they are pulled from DB in repository code
 # If the following line is present, sql initialization scripts are not called
