--- a/pom.xml
+++ b/pom.xml
@@ -181,8 +181,13 @@
 			<artifactId>ehcache</artifactId>
 			<version>2.10.5</version>
 		</dependency>
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.3.6</version>
+		</dependency>
 
-        <!-- DEPENDENCIES WITH DEBATABLE UTILITY -->
+		<!-- DEPENDENCIES WITH DEBATABLE UTILITY -->
 
 
 
