--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -38,7 +38,7 @@
     {
       "name": "eChempad.db.dialect",
       "type": "java.lang.String",
-      "description": "Description for eChempad.db.dialect."
+      "description": "Dialect for the database"
     },
     {
       "name": "eChempad.db.driver",
@@ -49,5 +49,15 @@
       "name": "eChempad.db.url",
       "type": "java.lang.String",
       "description": "Description for eChempad.db.url."
+    },
+    {
+      "name": "eChempad.db.policy",
+      "type": "java.lang.String",
+      "description": "Initialization mode for automatic JPA tables"
+    },
+    {
+      "name": "eChempad.db.show-sql",
+      "type": "java.lang.String",
+      "description": "Description for eChempad.db.show-sql."
     }
   ] }
