--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,6 +45,17 @@ eChempad.db.format_sql = yes
 # Naming schema used when naming tables and properties, it can be SpringImplicitNamingStrategy or SpringPhysicalNamingStrategy
 eChempad.db.naming_strategy = SpringPhysicalNamingStrategy
 
+# https://stackoverflow.com/questions/31469136/spring-data-jpa-storing-blob
+# This property configures the current session context, which is needed if you want to use the LobCreator, which is
+# invoked as  this.sessionFactory.getCurrentSession().getLobHelper()
+# Valid options:
+# - jta
+# - thread
+# - managed
+# - thread_static
+# current_session_context_class=thread
+eChempad.db.sessionContext = thread
+
 # To remove a warning about open session in view, which is considered an anti-pattern. It can cause performance problems
 # when active in some projects, but when is inactive we need to handle the LazyInitializationException by ourselves.
 # https://stackoverflow.com/questions/30549489/what-is-this-spring-jpa-open-in-view-true-property-in-spring-boot
@@ -144,17 +155,6 @@ signals.APIKeys.filename=key
 # This property is advice to be set to false if the program has an error when trying to serialize empty beans (?)
 # https://stackoverflow.com/questions/15261456/how-do-i-disable-fail-on-empty-beans-in-jackson
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
-
-
-# https://stackoverflow.com/questions/31469136/spring-data-jpa-storing-blob
-# This property configures the current session context, which is needed if you want to use the LobCreator, which is
-# invoked as  this.sessionFactory.getCurrentSession().getLobHelper()
-# Valid options:
-# - org.hibernate.context.ThreadLocalSessionContext
-# - thread
-# - org.hibernate.context.internal.ThreadLocalSessionContext
-
-spring.jpa.properties.hibernate.current_session_context_class=org.hibernate.context.internal.ThreadLocalSessionContext
 
 # Configure lazy initializations vs eager. In production should be true, but for many reasons it makes no sense to not
 # initialize the objects when they are pulled from DB in repository code
