--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -151,3 +151,8 @@ spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 # initialize the objects when they are pulled from DB in repository code
 # If the following line is present, sql initialization scripts are not called
 # spring.main.lazy-initialization=true
+
+#####################
+### Views (ZKoss) ###
+#####################
+zk.homepage=hello
