--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -27,6 +27,7 @@
       "react-app/jest"
     ]
   },
+  "proxy": "http://localhost:8081",
   "browserslist": {
     "production": [
       ">0.2%",
