--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -155,4 +155,20 @@ spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 #####################
 ### Views (ZKoss) ###
 #####################
-zk.homepage=hello
+zk.homepage=zul/index
+
+#zk.springboot-packaging=jar
+
+# Activate zul resolver, in order to avoid specifying path and / or extension when referring to a zul file
+zk.zul-view-resolver-enabled=true
+# Configure any folder below src/main/resources/web using the zk.zul-view-resolver-prefix-property
+zk.zul-view-resolver-prefix=
+# Automatically add this suffix (.zul) when invoking a zul template --> Not always applies! For example, applies to
+# zk.homepage, but not to property URI Template from a ZUL file
+zk.zul-view-resolver-suffix=.zul
+
+#zk.richlet-filter-mapping=
+
+#zk.websockets-enabled=true
+#zk.servlet3-push-enabled=true
+#zk.update-uri=/zkau
