ADDED: All UI content from create of iochemBD, added new definition for dictionary, added classes in web/ folder to control the UI, added paramter to maven wrapper in order to have hotfix changes with ZK, deleted images used in the example tutorial, added definition for ZK application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -155,20 +155,28 @@ spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 #####################
 ### Views (ZKoss) ###
 #####################
-zk.homepage=zul/index
+# when set will setup a @GetMapping for "/" to return the configured view-name
+zk.homepage=zul/main
 
+# Package as jar or war file
 #zk.springboot-packaging=jar
 
 # Activate zul resolver, in order to avoid specifying path and / or extension when referring to a zul file
+# enable/disable InternalViewResolver for zul files
 zk.zul-view-resolver-enabled=true
 # Configure any folder below src/main/resources/web using the zk.zul-view-resolver-prefix-property
+# prefix prepended to a view name (i.e. a folder inside the web resource package on the classpath)
 zk.zul-view-resolver-prefix=
 # Automatically add this suffix (.zul) when invoking a zul template --> Not always applies! For example, applies to
 # zk.homepage, but not to property URI Template from a ZUL file
 zk.zul-view-resolver-suffix=.zul
 
+# filter-mapping string as the basepath for richlets
 #zk.richlet-filter-mapping=
 
+# enable/disable websockets (available in ZK-EE)
 #zk.websockets-enabled=true
+# enable/disable servlet3 CometServerPush (available in ZK-EE)
 #zk.servlet3-push-enabled=true
+# configure servlet path for ZK's update engine (rarely used)
 #zk.update-uri=/zkau
