--- a/pom.xml
+++ b/pom.xml
@@ -30,8 +30,11 @@
 		<maven.compiler.target>${java.version}</maven.compiler.target>
 		<spring.version>5.3.22</spring.version>
 		<spring-security.version>5.7.3</spring-security.version>
+
 		<zkspringboot.version>2.5.12</zkspringboot.version>
 		<zkspringboot-starter.version>1.0.4</zkspringboot-starter.version>
+		<!-- Depends on the version of ZK that comes with zkspringboot-starter -->
+		<zk.version>8.6.0.1-Eval</zk.version>
 
 		<!--Used by the licenses plugin-->
 		<license.licenseName>apache_v2</license.licenseName>
@@ -52,7 +55,7 @@
 	API Wrapper  -->
 	<repositories>
 
-		<!-- ZKoss dependency -->
+		<!-- ZK dependency -->
 		<repository>
 			<id>ZK CE</id>
 			<name>ZK CE Repository</name>
@@ -213,6 +216,7 @@
 			<type>pom</type>
 			<version>${zkspringboot-starter.version}</version>
 		</dependency>
+
 	</dependencies>
 
 
@@ -443,10 +447,8 @@
 							</execution>
 						</executions>
 					</plugin>
-
 				</plugins>
 			</build>
 		</profile>
-
 	</profiles>
 </project>
