CHANGED: Structure and files of the resource and static folders, since now they have an special meaning in the app

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -86,8 +86,8 @@ spring.datasource.initialize = true
 
 # Even with the two previous properties, data-postgresql.sql and schema-postgresql.sql are not loaded. We must include these keys
 # From https://stackoverflow.com/questions/62611881/data-sql-with-spring-boot-jpa-postresql-is-not-loading
-spring.sql.init.schema-locations=classpath:schema-postgresql.sql
-spring.sql.init.data-locations=classpath:data-postgresql.sql
+spring.sql.init.schema-locations=classpath:SQL/schema-postgresql.sql
+spring.sql.init.data-locations=classpath:SQL/data-postgresql.sql
 
 
 
